--- a/partials/home.html
+++ b/partials/home.html
@@ -6,7 +6,7 @@
             <span oda-label="home.hello"></span>
         </div>
         <div class="col-md-6" style="text-align:right;">
-            <button onclick="$.Oda.App.Controler.Home.config();" class="btn btn-default" oda-label="home.calculate"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>home.calculate</button>
+            <button onclick="$.Oda.App.Controler.Home.config();" class="btn btn-default" oda-label="home.config"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>home.config</button>
         </div>
     </div>
     <div class="row">
@@ -63,12 +63,56 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            autoload
+        </div>
+    </div>
 </script>
 
-<script id="edit-Configure" type="text/template">
-
+<script id="edit-configure" type="text/template">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="form-group">
+                <label for="nb" oda-label="home.nb">nb</label>
+                <input value="{{nb}}" type="number" type="text" class="form-control" oda-input-text="nb" oda-input-text-tips="home.nb-tips"
+                       oda-input-text-placeholder="home.nb-placeholder" oda-input-text-check="Oda.Regexs:noInjection" required>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <label for="value" oda-label="home.value">value</label>
+                <input value="{{value}}" type="number" step="0.01" class="form-control" oda-input-text="value" oda-input-text-tips="home.value-tips"
+                       oda-input-text-placeholder="home.value-placeholder" oda-input-text-check="Oda.Regexs:noInjection" required>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <label for="shop" oda-label="home.shop">magasin</label>
+                <select class="form-control" oda-input-select="shop" required>
+                        <option value="" oda-label="oda-main.select-default"></option>
+                        <option value="1" {{(shop==='1')?'selected':''}}>Picard</option>
+                </select>
+            </div>
+        </div>
+    </div>
 </script>
 
-<script id="edit-calculate" type="text/template">
-
+<script id="view-calculate" type="text/template">
+    <div id="div_displayBasket">
+        <div class="progress">
+            <div id="progressBar" class="progress-bar" role="progressbar"
+                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                0%
+            </div>
+        </div>
+    </div>
+    <div id="stats"></div>
 </script>
+
+<style>
+    .progress-bar {
+        -webkit-transition: width 0.01s ease-in-out;
+        transition: width 0.01s ease-in-out;
+    }
+</style>
