--- a/partials/home.html
+++ b/partials/home.html
@@ -65,7 +65,12 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            autoload
+            <div class="input-group">
+                <input oda-input-text="search" type="text" class="form-control disabled" oda-input-text-placeholder="home.search" disabled>
+                <span class="input-group-btn">
+                    <button data-toggle="modal" class="btn btn-default" type="button" onclick="$.Oda.App.Controler.Home.search();"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                </span>
+            </div>
         </div>
     </div>
 </script>
@@ -108,6 +113,14 @@
         </div>
     </div>
     <div id="stats"></div>
+</script>
+
+<script id="search-template" type="text/template">
+    <div class="row">
+        <div class="col-md-12" id="divTableSearch">
+            <oda-loading></oda-loading>
+        </div>
+    </div>
 </script>
 
 <style>
